# dapla_github_metrics

./: .cruft.json  .gitignore  README.md  pyproject.toml
src/notebooks/: number-of-teams.ipynb
