[tool.poetry]
name = "dapla_github_metrics"
version = "0.1.0"
description = "Collect metrics on use of Dapla from SSB's Github"
authors = ["Miles Winther <mmw@ssb.no>"]
license = "MIT"

[tool.poetry.scripts]
datadoc = 'datadoc.app:main'

[tool.poetry.dependencies]
python = "^3.10"
dapla-toolbelt = "^1.3.2"
GitPython = "^3.1.29"
plotly = "^5.10.0"
nbformat = "^5.7.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
